--- a/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
+++ b/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="396.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rocket.app.view.MortgageController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rocket.app.view.MortgageController">
    <children>
-      <TitledPane alignment="CENTER" animated="false" collapsible="false" text="Payment Calculator" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+      <SplitPane dividerPositions="0.5" prefHeight="500.0" prefWidth="700.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <GridPane alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane layoutX="89.0" layoutY="173.0" prefHeight="498.0" prefWidth="346.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="284.0" minWidth="10.0" prefWidth="180.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="398.0" minWidth="10.0" prefWidth="398.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -27,36 +30,67 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="House Cost" />
-                        <Label text="Down Payment" GridPane.rowIndex="1" />
-                        <Label text="Anual Income" GridPane.rowIndex="2" />
-                        <Label text="Monthly Expenses" GridPane.rowIndex="3" />
-                        <Label text="Credit Score" GridPane.rowIndex="4" />
-                        <Label prefHeight="17.0" prefWidth="122.0" text="Mortgage Term" GridPane.rowIndex="5" />
-                        <Label text="Monthly payment" GridPane.rowIndex="7" />
-                        <ComboBox id="fx:term" fx:id="cmbTerm" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <Button fx:id="btnCalcPayment" mnemonicParsing="false" onAction="#btnCalculatePayment" prefHeight="35.0" prefWidth="134.0" text="Calculate Payment" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                        <Button fx:id="btnExit" mnemonicParsing="false" onAction="#btnExit" prefHeight="35.0" prefWidth="100.0" text="Exit" translateX="139.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                        <TextField fx:id="txtHouseCost" alignment="CENTER" GridPane.columnIndex="1" />
-                        <TextField fx:id="txtDownPayment" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="txtIncome" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField fx:id="txtExpenses" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="txtCreditScore" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField fx:id="txtMortgagePayment" alignment="CENTER" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                        <Label text="Rate" GridPane.rowIndex="6" />
-                        <TextField fx:id="txtRate" alignment="CENTER" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <Button fx:id="btnClear" mnemonicParsing="false" onAction="#btnClear" prefHeight="35.0" prefWidth="100.0" text="Clear" translateX="244.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                        <Label text="Income">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin></Label>
+                        <Label text="Expenses" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin></Label>
+                        <Label text="Credit Score" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin></Label>
+                        <Label text="House Cost" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin></Label>
+                        <Label text="Term (years)" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin></Label>
+                        <TextField fx:id="income" GridPane.columnIndex="1" />
+                        <TextField fx:id="expenses" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="creditScore" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="houseCost" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <ComboBox fx:id="term" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                 <String fx:value="15" />
+                                 <String fx:value="30" />
+                              </FXCollections>
+                           </items>
+                        </ComboBox>
                      </children>
                   </GridPane>
                </children>
             </AnchorPane>
-        </content>
-      </TitledPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <GridPane layoutX="8.0" prefHeight="498.0" prefWidth="346.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label fx:id="mortgageDetails" text="" GridPane.rowIndex="2" />
+                        <Button fx:id="calculatePayment" mnemonicParsing="false" onAction="#btnCalculatePayment" text="Calculate Payment" textAlignment="CENTER" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="65.0" />
+                           </GridPane.margin></Button>
+                        <Label fx:id="interestRateLabel" text="Interest Rate:" />
+                     </children>
+                  </GridPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
